tests/samples/positive/evaluation/eval_order_assign.ax
module eval_order_assign;

fn next(state: &mut i32, expected: i32) -> i32 {
    if *state != expected {
        return 100;
    }
    *state = *state + 1;
    return expected;
}

fn main() -> i32 {
    var state: i32 = 0;
    var value: i32 = 0;
    value = next(&mut state, 0) + next(&mut state, 1);
    return state + value - 3;
}
